--- a/start.html
+++ b/start.html
@@ -451,6 +451,12 @@ output "created_files" { # Get output from module
 * TF provides a lot of useful functions like `file(file_name)` to read contents of file
  or `uuid()` to create a new UUID/GUID
 
+---
+# Docker Example
+
+* We will create two Docker container and a network between them
+* Check `examples\006_docker` directory
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
