--- a/start.html
+++ b/start.html
@@ -452,10 +452,13 @@ output "created_files" { # Get output from module
  or `uuid()` to create a new UUID/GUID
 
 ---
-# Docker Example
+# Docker and Postgres Examples
 
-* We will create two Docker container and a network between them
+* We will create two Docker containers and a network between them
 * Check `examples\006_docker` directory
+
+* We will create database and role in that database
+* Check `examples\007_db_provisioning`
 
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
